# ChangeLog for net-im/kadu
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/kadu/ChangeLog,v 1.76 2009/05/23 13:07:44 cla Exp $

*kadu-0.6.5.2-r2 (23 May 2009)

  23 May 2009; Dawid Węgliński <cla@gentoo.org> -kadu-0.6.5.2-r1.ebuild,
  +kadu-0.6.5.2-r2.ebuild:
  Add tabs support in kadu

  23 May 2009; Thomas Anderson <gentoofan23@gentoo.org> kadu-0.6.5.1.ebuild,
  kadu-0.6.5.2.ebuild, kadu-0.6.5.2-r1.ebuild:
  QA: Move EAPI definition before any global scope function calls thanks to
  Maciej Mrozowski in bug #270897

  14 May 2009; Dawid Węgliński <cla@gentoo.org> kadu-0.6.5.2-r1.ebuild:
  Add missing dependency

*kadu-0.6.5.2-r1 (01 May 2009)

  01 May 2009; Dawid Węgliński <cla@gentoo.org> +kadu-0.6.5.2-r1.ebuild:
  autohide or autoaway modules don't work without module_idle module. Thanks
  to NineX on IRC. Add >=app-crypt/qca-2.0.0-r2 to DEPEND for bug #268087.

*kadu-0.6.5.2 (30 Apr 2009)

  30 Apr 2009; Dawid Węgliński <cla@gentoo.org> metadata.xml,
  -kadu-0.4.1.ebuild, -kadu-0.4.1-r1.ebuild, -kadu-0.4.2.ebuild,
  -kadu-0.4.3.ebuild, -kadu-0.5.0_pre20060115.ebuild,
  -kadu-0.5.0_pre20060211.ebuild, -kadu-0.5.0.ebuild, +kadu-0.6.5.2.ebuild:
  Version bump, clean up

  09 Mar 2009; Dawid Węgliński <cla@gentoo.org> kadu-0.6.5.1.ebuild:
  Add >=x11-libs/qt-webkit-4.4:4 dependency

*kadu-0.6.5.1 (07 Mar 2009)

  07 Mar 2009; Dawid Węgliński <cla@gentoo.org>
  +files/kadu-0.6.5.1-fix-qt4.5-encoding.patch,
  +files/libgsm-ugly-code.patch, +kadu-0.6.5.1.ebuild:
  Version bump (bug #257644). Thanks to Maciej Mrozowski <reavertm@poczta.fm>
  for working on this bug.

  11 Feb 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  kadu-0.6.0.2-r1.ebuild:
  ppc stable, bug #245572

  08 Feb 2009; Markus Meier <maekke@gentoo.org> kadu-0.6.0.2-r1.ebuild:
  amd64/x86 stable, bug #245572

*kadu-0.6.0.2-r1 (04 Feb 2009)

  04 Feb 2009; Robert Buchholz <rbu@gentoo.org> metadata.xml,