@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/kadu/Attic/kadu-0.6.5.2.ebuild,v 1.2 2009/05/23 10:45:21 gentoofan23 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/kadu/Attic/kadu-0.6.5.2.ebuild,v 1.3 2009/06/05 17:45:33 tampakrap Exp $
 
 EAPI="2"
 inherit base cmake-utils flag-o-matic
@@ -29,8 +29,8 @@ DEPEND="${COMMON_DEPEND}
 	>=dev-util/cmake-2.6
 "
 RDEPEND="${COMMON_DEPEND}
-	amarok? ( media-sound/amarok:0 )
-	amarok2? ( media-sound/amarok:2 )
+	amarok? ( media-sound/amarok:3.5 )
+	amarok2? ( media-sound/amarok:4 )
 	audacious? ( media-sound/audacious )
 	bmpx? ( media-sound/bmpx )
 	dragonplayer? ( kde-base/dragonplayer )
