@@ -1,6 +1,10 @@
 # ChangeLog for net-im/kadu
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/kadu/ChangeLog,v 1.76 2009/05/23 13:07:44 cla Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/kadu/ChangeLog,v 1.77 2009/06/05 17:45:33 tampakrap Exp $
+
+  05 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org> kadu-0.6.5.1.ebuild,
+  kadu-0.6.5.2.ebuild, kadu-0.6.5.2-r2.ebuild:
+  Correct amarok clots to 3.5 for amarok-1.4 and 4 for amarok-2*/live
 
 *kadu-0.6.5.2-r2 (23 May 2009)
 
